<resources>


    <string name="go_premium_unlock_nnew_features">Go Premium &amp; Unlock\nnew features</string>
    <string name="oil_change_interval_by_date">Oil Change interval by Date</string>
    <string name="enter_oil_change_interval_by_date">Enter Oil Change interval by date</string>
    <string name="enter_car_license_plate">Enter Car license Plate</string>
    <string name="comment">Comment</string>
    <string name="oil_change_interval_by_mileage">Oil Change interval by mileage</string>
    <string name="oil_with_filter">Oil With Filter</string>
    <string name="enter_cost">Enter Cost</string>
    <string name="enter_document_name">Enter Document Name</string>
    <string name="enter_labour">Enter Labour</string>
    <string name="enter_mileage">Enter Mileage</string>
    <string name="enter_service_interval_by_date">Enter Service interval by date</string>
    <string name="enter_service_interval_by_mileage">Enter Service interval by mileage</string>
    <string name="enter_service_name">Enter Service name</string>
    <string name="enter_vendor_codes">Enter Vendor Codes</string>
    <string name="error_icon_content_description">Error</string>
    <string name="enter_car_name">Enter Car name</string>
    <string name="accept_and_continue">ACCEPT AND CONTINUE</string>
    <string name="ad_setting">Ad Setting</string>
    <string name="add_document">Add Document</string>
    <string name="add_fuel">Add Fuel</string>
    <string name="add_service">Add Service</string>
    <string name="app_name">Vehicle Maintenance</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="are_you_sure_want_to_delete">Are you sure want to delete?</string>
    <string name="attach_photo">Attach Photo</string>
    <string name="backup_restore">Backup &amp; Restore</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="buy_plan">Buy Plan</string>
    <string name="camera">Camera</string>
    <string name="cancel">Cancel</string>
    <string name="car_license_plate">Car license Plate</string>
    <string name="car_name">Car name</string>
    <string name="car_purchase_date">Car Purchase date</string>
    <string name="car_service">Car Maintenance</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="confirmation_restore">Confirmation Restore?</string>
    <string name="currency">Currency</string>
    <string name="date">Date</string>
    <string name="delete">Delete</string>
    <string name="delete_items">Delete Items</string>
    <string name="disclouser_description">This app is governed by Techno information`s Terms of Service. By continuing to use app you represent that you have read and accept the Terms of Service, Privacy Policy, and Permission Disclosure.</string>
    <string name="document_name">Document Name</string>
    <string name="export_successfully">Export Successfully</string>
    <string name="failed_to_export">Failed to export</string>
    <string name="fuel">Fuel</string>
    <string name="fuel_cost">Fuel Cost</string>
    <string name="fuel_type">Fuel Type</string>
    <string name="gallery">Gallery</string>
    <string name="importing_data">Importing data ...</string>
    <string name="intervals">Intervals</string>
    <string name="labour">Labour</string>
    <string name="merge_">Merge</string>
    <string name="mileage">Mileage</string>
    <string name="months">Months</string>
    <string name="nav_close">Close</string>
    <string name="nav_open">Open</string>
    <string name="notification">Notification</string>
    <string name="ok">Ok</string>
    <string name="paper">Paper</string>
    <string name="parts">Parts</string>
     <string name="periodical_maintenance">Periodical maintenance</string>
    <string name="pick_image_intent_chooser_title">Select source</string>
    <string name="price_per_liter">Price per Liter</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_policy1">PRIVACY POLICY</string>
    <string name="rate_us">Rate us</string>
    <string name="rationale_ask">This app may not work correctly without the requested permissions.</string>
    <string name="rationale_ask_again">This app may not work correctly without the requested permissions. Open the app settings screen to modify app permissions.</string>
    <string name="recommended">Recommended</string>
    <string name="reminder">Reminder</string>
    <string name="reports">Reports</string>
    <string name="request_camera">We need access to your camera for take picture.</string>
    <string name="restore_file_list">Restore file list</string>
    <string name="save">Save</string>
    <string name="search_menu_title">Search</string>
    <string name="see_all">See All</string>
    <string name="select_service">Select Service</string>
    <string name="service">Service</string>
    <string name="service_interval_by_date">Service interval by Date</string>
    <string name="service_interval_by_mileage">Service interval by mileage</string>
    <string name="service_name">Service name</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="take_drive_backup">Take Drive Backup</string>
    <string name="terms_of_serivce">Terms of Service</string>
    <string name="terms_of_service1">TERMS OF SERVICE</string>
    <string name="title_settings_dialog">Permissions Required</string>
    <string name="total">Total</string>
    <string name="total_cost">Total Cost</string>
    <string name="tracker">Tracker</string>
    <string name="units">Units</string>
    <string name="upgrade">upgrade</string>
    <string name="user_agreement1">PERMISSION DISCLOSURE</string>
    <string name="vendor_codes">Vendor Codes</string>
</resources>
