<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <RelativeLayout
        android:orientation="vertical"
        android:tag="layout/dialog_delete_0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25sdp"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="0dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:background="@color/delete_icon_bg"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_10sdp" />

                <LinearLayout
                    android:orientation="vertical"
                    android:padding="@dimen/_10sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp">

                    <TextView
                        android:theme="@style/part_title_text"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/delete_items" />

                    <TextView
                        android:theme="@style/hintSemiBold"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/are_you_sure_want_to_delete"
                        android:minLines="2" />
                </LinearLayout>

                <LinearLayout
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:background="@color/see_all_bg"
                    android:paddingTop="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_10sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <com.google.android.material.card.MaterialCardView
                            android:id="@+id/btnCancel"
                            android:layout_marginRight="@dimen/_5sdp"
                            app:strokeColor="@color/icon_stroke"
                            app:strokeWidth="@dimen/_1sdp"
                            style="@style/dialogButton">

                            <TextView
                                android:theme="@style/regularText"
                                android:layout_gravity="center"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/cancel" />
                        </com.google.android.material.card.MaterialCardView>

                        <com.google.android.material.card.MaterialCardView
                            android:id="@+id/btnDelete"
                            android:layout_marginLeft="@dimen/_5sdp"
                            app:cardBackgroundColor="@color/delete_icon_bg"
                            app:cardElevation="0dp"
                            style="@style/dialogButton">

                            <TextView
                                android:textSize="@dimen/_14sdp"
                                android:textColor="@color/white"
                                android:layout_gravity="center"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/ok"
                                android:fontFamily="@font/regular" />
                        </com.google.android.material.card.MaterialCardView>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_centerHorizontal="true"
            app:cardBackgroundColor="@color/delete_icon_bg"
            app:cardCornerRadius="@dimen/_25sdp"
            app:cardElevation="0dp">

            <ImageView
                android:layout_gravity="center"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/delete"
                app:tint="@color/white" />
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</layout>
