<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:tag="layout/activity_add_document_0">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/_10sdp">

                <ImageView
                    android:id="@+id/back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="?attr/selectableItemBackground"
                    android:src="@drawable/ic_back_arrow" />

                <TextView
                    android:id="@+id/txtTitle"
                    style="@style/toolbar_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_toRightOf="@+id/back"
                    android:text="@string/add_document" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/btnSave"
                    style="@style/toolbar_card"
                    android:foreground="?attr/selectableItemBackground">

                    <TextView
                        style="@style/toolbar_save_text"
                        android:layout_gravity="center"
                        android:text="@string/save" />
                </androidx.cardview.widget.CardView>
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroller"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/banner1"

            android:layout_below="@+id/toolbar"

            android:fillViewport="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/_10sdp">

                    <FrameLayout
                        android:layout_width="@dimen/_87sdp"
                        android:layout_height="@dimen/_80sdp"
                        android:layout_gravity="center_horizontal">

                        <com.google.android.material.card.MaterialCardView
                            android:id="@+id/mainImageCard"
                            android:layout_width="@dimen/_80sdp"
                            android:layout_height="@dimen/_80sdp"
                            app:cardBackgroundColor="@color/edit_text_card"
                            app:cardCornerRadius="@dimen/_40sdp"
                            app:cardElevation="0dp"
                            app:strokeColor="@color/icon_stroke"
                            app:strokeWidth="@dimen/_5sdp">

                            <ImageView
                                android:id="@+id/documentImage"
                                android:layout_width="@dimen/_40sdp"
                                android:layout_height="@dimen/_40sdp"
                                android:layout_gravity="center"
                                android:src="@drawable/other_document" />
                        </com.google.android.material.card.MaterialCardView>

                        <ImageView
                            android:id="@+id/cancelImage"
                            android:layout_width="@dimen/_28sdp"
                            android:layout_height="@dimen/_28sdp"
                            android:layout_gravity="end"
                            android:layout_marginTop="@dimen/_45sdp"
                            android:background="?attr/selectableItemBackground"
                            android:src="@drawable/edit"
                            android:visibility="visible" />
                    </FrameLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_3sdp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/document_name"
                            android:theme="@style/bold_text" />

                        <TextView
                            android:id="@+id/txtDocumentNameCnt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="@dimen/_10sdp"
                            android:text="0"
                            android:theme="@style/hintTheme" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="/90"
                            android:theme="@style/hintTheme" />
                    </LinearLayout>

                    <androidx.cardview.widget.CardView style="@style/editTextCard">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <EditText
                                android:id="@+id/edtDocumentName"
                                style="@style/editText"
                                android:layout_gravity="center_vertical"
                                android:hint="@string/enter_document_name"
                                android:inputType="textCapWords"
                                android:padding="@dimen/_10sdp" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_3sdp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/mileage"
                            android:theme="@style/bold_text" />
                    </LinearLayout>

                    <androidx.cardview.widget.CardView style="@style/editTextCard">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <EditText
                                android:id="@+id/edtMileage"
                                style="@style/editText"
                                android:layout_gravity="center_vertical"
                                android:hint="@string/enter_mileage"
                                android:inputType="number"
                                android:maxLength="7"
                                android:padding="@dimen/_10sdp" />

                            <TextView
                                android:id="@+id/txtMileageUnit"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginLeft="@dimen/_10sdp"
                                android:layout_marginRight="@dimen/_10sdp"
                                android:theme="@style/hintTheme" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_3sdp"
                        android:text="@string/date"
                        android:theme="@style/bold_text" />

                    <androidx.cardview.widget.CardView style="@style/editTextCard">

                        <LinearLayout
                            android:id="@+id/llDate"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="?attr/selectableItemBackground"
                            android:orientation="horizontal">

                            <EditText
                                android:id="@+id/edtDate"
                                style="@style/editText"
                                android:layout_gravity="center_vertical"
                                android:focusable="false"
                                android:hint="@string/date"
                                android:padding="@dimen/_10sdp" />

                            <ImageView
                                android:id="@+id/calendar"
                                android:layout_width="@dimen/_25sdp"
                                android:layout_height="@dimen/_25sdp"
                                android:layout_gravity="center_vertical"
                                android:layout_marginLeft="@dimen/_5sdp"
                                android:layout_marginRight="@dimen/_5sdp"
                                android:background="?attr/selectableItemBackground"
                                android:padding="@dimen/_5sdp"
                                android:src="@drawable/calendar" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_3sdp"
                        android:text="@string/total_cost"
                        android:theme="@style/bold_text" />

                    <androidx.cardview.widget.CardView style="@style/costEditTextCard">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <EditText
                                android:id="@+id/edtTotalCost"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_gravity="center_vertical"
                                android:layout_weight="1"
                                android:background="@null"
                                android:hint="@string/enter_cost"
                                android:inputType="numberDecimal"
                                android:padding="@dimen/_10sdp"
                                android:theme="@style/costHintTheme" />

                            <TextView
                                android:id="@+id/txtCurrency"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginLeft="@dimen/_10sdp"
                                android:layout_marginRight="@dimen/_10sdp"
                                android:theme="@style/costHintThemeText" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_3sdp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:text="@string/comment"
                            android:theme="@style/bold_text" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/txtCommentsCnt"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginLeft="@dimen/_10sdp"
                                android:text="0"
                                android:theme="@style/hintTheme" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:text="/1000"
                                android:theme="@style/hintTheme" />
                        </LinearLayout>
                    </LinearLayout>

                    <androidx.cardview.widget.CardView style="@style/commentTextCard">

                        <EditText
                            android:id="@+id/edtComments"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:gravity="start"
                            android:hint="Enter Comment"
                            android:minLines="3"
                            android:padding="@dimen/_10sdp"
                            android:textColorHint="@color/hint"
                            android:textSize="@dimen/_12sdp" />
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_3sdp"
                        android:text="@string/attach_photo"
                        android:theme="@style/bold_text" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.google.android.material.card.MaterialCardView
                            android:id="@+id/btnSelect"
                            android:layout_width="@dimen/_50sdp"
                            android:layout_height="@dimen/_50sdp"
                            android:layout_gravity="center_vertical"
                            android:foreground="?attr/selectableItemBackground"
                            app:cardCornerRadius="@dimen/_5sdp"
                            app:cardElevation="0dp"
                            app:strokeColor="@color/icon_stroke"
                            app:strokeWidth="0.6dp">

                            <ImageView
                                android:layout_width="@dimen/_25sdp"
                                android:layout_height="@dimen/_25sdp"
                                android:layout_gravity="center"
                                android:src="@drawable/add_photo" />
                        </com.google.android.material.card.MaterialCardView>

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rvImages"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnDelete"
            style="@style/floatingDeleteButton"
            android:layout_above="@+id/banner1"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/_10sdp" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />


        <RelativeLayout
            android:id="@+id/banner1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center">

            <RelativeLayout
                android:id="@+id/banner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:gravity="center" />

        </RelativeLayout>


    </RelativeLayout>
</layout>
